[metadata]
name = nh
version = 0.0.5
url = https://github.com/t-c-w/nh
platforms = any
description_file = README.md
description = framework for data flow
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = nh

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

